[package]
name = "project-med"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["client", "http2"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "macros"] }
hyper-tls = "0.5.0"
log = "0.4"
bytes = "1"
grep = "0.2"
anyhow = "1"
csv = "1"
toml = "0.5"
thiserror = "1"
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
log4rs = "1.1"
